# GPT-agent

./: AGENTS.md  README.md  START_HERE.md  pyproject.toml
.github/workflows/: daily-improvement-ci.yml
config/: research_sources.example.yaml
data/daily_improvement/: sample_raw_items.json
docs/: DAILY_IMPROVEMENT_LOOP.md  DAILY_IMPROVEMENT_MASTER_PLAN_TOP1.md  DAILY_IMPROVEMENT_SYSTEM_ARCHITECTURE.md  IMPROVEMENT_BACKLOG.md  INNOVATION_WATCHLIST.md  N8N_DAILY_IMPROVEMENT_BLUEPRINT.md  PHASE1_EXECUTABLE_MVP_RUNBOOK.md  PHASE2_LIVE_SOURCES_RUNBOOK.md  RUNBOOK_DAILY_RESEARCH.md  SCORING_RUBRIC.md
docs/daily-research/: TEMPLATE.md
docs/operational-intelligence-architecture-library/: README.md
docs/operational-intelligence-architecture-library/anti_patterns/: anti_pattern_catalog.md  autonomous_mutation_without_gates.md  channel_specific_chaos.md  context_accumulation_without_hierarchy.md  hidden_state_logic.md  no_clear_source_of_truth.md  prompt_as_runtime.md  retry_instead_of_recovery.md
docs/operational-intelligence-architecture-library/blueprints/: airys_memory_runtime_blueprint.md  clinic_os_operator_console_blueprint.md  clinic_os_runtime_blueprint.md  vertical_ai_os_capability_stack.md
docs/operational-intelligence-architecture-library/canon/: airys_doctrine.md  architecture_boundaries.md  (+15 more)
projects/future-thesis-lab/: AGENTS.md  README.md
src/daily_improvement/: __init__.py  backlog.py  cli.py  collectors.py  config.py  dedup.py  map_projects.py  models.py  normalize.py  notify.py  pipeline.py  report.py  run_daily.py  score.py  sources.py  weekly.py
(+24 files in other folders)
